# HW_WEB_08

./: pyproject.toml
first_part/: seeds.py
second_part/: consumer.py  models.py  producer.py
