[tool.poetry]
name = "pythonproject37"
version = "0.1.0"
description = ""
authors = ["Gaveloshpom <gaveloshpom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
pika = "^1.3.1"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
